# cotizador_vf

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALISIS_distribucion_costos_v3.md  ARQUITECTURA.md  ARQUITECTURA_V8_CORRECCIONES.md  COMO_FUNCIONA_TU_COTIZADOR.md  CONCLUSIONES_Y_PROXIMOS_PASOS.txt  DEBUG_ESFUERZO_GUIDE.md  DEPLOY.md  DEPLOY_VERCEL.md  DIAGNOSTICO_BD.md  DIAGRAMA_flujo_distribucion.txt  EXPLICACION_CALCULOS_HILOS.md  FASE_1_CAMBIOS_REALIZADOS.md  FLUJO_FUNCIONAL_CORREGIDO.md  INSTALACION.md  PUERTOS_DESARROLLO.md  README.md  README_GITHUB.md  REFACTORIZACION_RAPIDA_v8.md  RESUMEN_COMPARATIVA_V3.txt  RESUMEN_PARA_DESARROLLADOR.md  SECURITY.md  SETUP_LOCAL_DEV.md  SOLUCION_INPUT_FOCUS.md  analisis_calculo_hilos.py  analisis_simple.py  architecture.md  comparacion_populate_costo.txt  david.pk8  db_funciones_almacenadas.txt  debug_output.txt  deploy.sh  docker-compose.yml  install.md  kill_servers.bat  test_cotizar.json  test_db.py  validar_distribucion_costos_v3.sql  (+2 more)
backend/: .gitignore  Dockerfile  backtesting.py  backtesting_estilos_20250803_174628.xlsx  backtesting_estilos_20250804_093540.xlsx  check_estilo_propio.py  check_fecha_corrida.py  check_fechas_hoy.py  check_table_structure.py  config.py  database.py  debug_costos_detalle.py  debug_cotizacion.py  debug_estilo_18420.py  debug_simple.py  diagnostico_polo_box.py  entrypoint.sh  explore_database.py  extract_server_cert.py  inspect_schema.py  main.py  models.py  odbcinst.sh  pyproject.toml  requirements.txt  server_cert.der  test_api_cotizacion.py  test_connection.py  test_connection_final.py  (+7 more)
(+79 files in other folders)
